<resources>
    <string name="app_name">Catplayer</string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="addaccount">Login</string>
    <string name="download">Download</string>
    <string name="downloadAlbum">Download Album</string>
    <string name="alreadyDownloadedMsg">%1$s already downloaded!</string>
    <string name="downloadNotAvailableMsg">%1$s not available for download!</string>
    <string name="songAddedToPlaylistMsg">Song added to playlist</string>
    <string name="streamNotAvailableMsg">%1$s is not available for streaming.</string>
    <string name="userNotSignedInMsg">Not signed in!</string>
    <string name="downloadSuccessfulMsg">%1$s downloaded!</string>
    <string name="downloadPlaylistSuccessfulMsg">%1$s downloaded successful!</string>
    <string name="loginSuccessfulMsg">Logged in!</string>
    <string name="loginFailedMsg">Login failed!</string>
    <string name="settingsUpdatedMsg">Settings updated! Please restart app to take effect.</string>
    <string name="setUsernamePasswordSettingsMsg">Please set your username and password in the settings!</string>
    <string name="playNext">Play Next</string>
    <string name="addToPlaylist">Add to playlist…</string>
    <string name="pickPlaylistMsg">Pick a playlist:</string>
    <string name="reviewPrivacyPolicyMsg">Please review our privacy policy at: %1$s</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="ok">OK</string>
    <string name="playButton">Play</string>
    <string name="pauseButton">Pause</string>
    <string name="nextButton">Next</string>
    <string name="prevButton">Previous</string>
    <string name="coverImage">Cover</string>
    <string name="closeButton">Close</string>
    <string name="downloadingCoversMsg">Downloading Cover Images</string>
    <string name="catalogView">Catalog View</string>
    <string name="albumView">Album View</string>
    <string name="allowStreamMobile">Allow streaming over mobile data</string>
    <string name="allowDownloadMobile">Allow downloading over mobile data</string>
    <string name="allowCoverDownloadMobile">Allow cover downloads over mobile data</string>
    <string name="settingsDescription">Settings</string>
    <string name="darkThemeSwitch">Enable dark theme</string>
    <string name="maximumSongsSeekBarLabel">Maximum songs loaded</string>
    <string name="disableAudioFocusSwitch">Enable playback over other media apps</string>
    <string name="playAlbumNext">Play Album Next</string>
    <string name="fullscreenAlbumImage">Album Image</string>
    <string name="fullscreenPlayPause">Play Pause</string>
    <string name="fullscreenNext">Next</string>
    <string name="fullscreenPrevButton">Previous</string>
    <string name="livestreamTitle">Monstercat Livestream</string>
    <string name="livestreamArtist">Monstercat</string>
    <string name="couldNotFindSongMSg">Could not find song</string>
    <string name="errorRetrieveAlbumData">Error retrieving album data</string>
    <string name="errorRetrievePlaylist">Error retrieving playlist</string>
    <string name="errorUpdatePlaylist">Error updating playlist</string>
    <string name="errorNotLoggedIn">Not logged in</string>
    <string name="downloadStream">Download stream before playback</string>
    <string name="musicbarDescription">Currently playing</string>
    <string name="homeSearchDescription">Search song</string>
    <string name="errorDownloadNotAllowedFallbackStream">You are not allowed to download this. Fallback to streaming.</string>
    <string name="applicationName">Catplayer</string>
    <string name="email">Email</string>
    <string name="playlistDeletedMsg">Playlist deleted!</string>
    <string name="errorDeletingPlaylist">Could not delete playlist</string>
    <string name="removedSongFromPlaylistMsg">Removed song from playlist!</string>
    <string name="errorRemovingSongFromPlaylist">Could not remove song from playlist!</string>
    <string name="playlistCreatedMsg">Playlist created!</string>
    <string name="errorCreatingPlaylist">Could not create playlist!</string>
    <string name="createPlaylist">Create new playlist</string>
    <string name="downloadFlacInsteadMp3">Download FLAC insted of MP3</string>
    <string name="coverResolution">Cover resolution</string>
    <string name="loop">Loop</string>
    <string name="shuffle">Shuffle</string>
    <string name="delete">Delete</string>
    <string name="resetDatabase">Reset Database</string>
    <string name="resetDatabaseQuestion">Are you sure you want to reset the database (requires app restart)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletePlaylistDownloadedTracksMsg">Are you sure you want to delete the downloaded tracks in this playlist?</string>
    <string name="deletePlaylistMsg">Are you sure you want to delete this playlist?</string>
    <string name="albumHasNoLinksMsg">Album has no links!</string>
    <string name="pickLinkToShare">Pick a link to share:</string>
    <string name="shareAlbum">Share album…</string>
    <string name="contextMenu">Context menu</string>
    <string name="twoFaCode">2FA code</string>
    <string name="openAlbumInApp">Open album in app…</string>
    <string name="pickApp">Pick app:</string>
    <string name="skipSongsMonstercat">Skip songs from monstercat (e.g. COTW)</string>
    <string name="songNotPlayableError">Song is not available!</string>
    <string name="crossfade">Crossfade</string>
    <string name="monstercatLivestream">Monstercat Livestream</string>
    <string name="songProgress">Song progress</string>
    <string name="addToQueue">Add to queue</string>
    <string name="addAlbumToQueue">Add album to queue</string>
    <string name="yourPlaylists">Your playlists</string>
    <string name="noPlaylistFound">No playlist found</string>
    <string name="noInternetAccessError">No access to internet!</string>
    <string name="playlistView">Playlist View</string>
    <string name="contentView">Content View</string>
    <string name="playlistName">Playlist Name</string>
    <string name="retry">Retry</string>
    <string name="errorLoadingSongList">Could not load song list</string>
    <string name="errorLoadingAlbumList">Could not load album list</string>
    <string name="errorLoadingAlbum">Error loading album</string>
    <string name="errorLoadingSearch">Error loading search</string>
    <string name="errorLoadingPlaylists">Error loading playlists</string>
    <string name="errorLoadingPlaylistTracks">Error loading playlist tracks</string>

    <string name="downloadNotificationChannelId">Download Notification</string>
    <string name="downloadNotificationDescription">Download Notification for Catplayer</string>

    <string name="musicNotificationChannelId">Player Notification</string>
    <string name="musicNotificationDescription">Player Notification for Catplayer</string>

    <string name="pushNotificationChannelId">Push notifications</string>
    <string name="pushNotificationDescription">Push notifications for Catplayer</string>

    <string name="playlistId">Playlist ID</string>
    <string name="addPlaylistId">Add playlist from Playlist ID</string>
    <string name="add">Add</string>
    <string name="renamePlaylist">Rename playlist</string>
    <string name="playlistRenamedMsg">Playlist renamed!</string>
    <string name="renamePlaylistError">Error renaming playlist</string>
    <string name="makePlaylistPublic">Make public</string>
    <string name="makePlaylistPrivate">Make private</string>
    <string name="playlistNowPublicMsg">Playlist is now public</string>
    <string name="playlistNowPrivateMsg">Playlist is now private</string>
    <string name="playlistStateChangeError">Error changing playlist state</string>
    <string name="sharePlaylist">Share playlist</string>
    <string name="openPlaylistInApp">Open playlist in browser</string>
    <string name="useCustomApi">Use custom API for catalog-view, album-view, cover images and search</string>
    <string name="playRelatedAfter">Play related songs after playback finished (uses custom API)</string>
    <string name="saveCoverImagesToCache">Save cover images to cache</string>
    <string name="volume">Volume</string>
    <string name="customApiEnabledMsg">Custom API enabled!</string>
    <string name="customApiEnableError">Could not enable custom API!</string>
    <string name="setCustomApiUrl">Set custom API URL</string>
    <string name="back">Back</string>
    <string name="loadLiveInfo">Load liveinfo while playing livestream (uses custom API)</string>

    <string name="defaultNotificationTopics">[{\"description\": \"Default push notifications\", \"topicname\": \"default\"}, {\"description\": \"Monstercat Newsletter\", \"topicname\": \"newsletter\"}]</string>
    <string name="pushNotifications">Push notifications</string>
    <string name="pushNotificationSettings">Change push notification settings</string>
    <string name="catplayerSettings">Catplayer Settings</string>
    <string name="accountSettings">Account Settings</string>
    <string name="playbackSettings">Playback Settings</string>
    <string name="dataSettings">Data Settings</string>
    <string name="advancedSettings">Advanced Settings</string>
    <string name="errorPlaybackNotAllowed">Playback not allowed (check settings for playback over mobile data and playback of non creator friendly songs)</string>
    <string name="dontPlayNotCreatorFriendly">Don\'t play non-creator-friendly songs</string>
    <string name="notOnline">Not Online!</string>
    <string name="logout">Logout</string>
    <string name="title_explore">Explore</string>
</resources>
