<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fullscreenAlbumImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/fullscreenTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_music_video_black_24dp"
        android:contentDescription="@string/fullscreenAlbumImage" />

    <ImageButton
        android:id="@+id/fullScreenPlay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:src="@drawable/ic_play_arrow_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/fullscreenPlayPause" />

    <ImageButton
        android:id="@+id/fullscreenLoop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:src="@drawable/ic_repeat_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fullscreenNext"
        android:contentDescription="@string/loop" />

    <ImageButton
        android:id="@+id/fullscreenNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:src="@drawable/ic_skip_next_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fullscreenLoop"
        app:layout_constraintStart_toEndOf="@+id/fullScreenPlay"
        android:contentDescription="@string/fullscreenNext" />

    <ImageButton
        android:id="@+id/fullscreenPrev"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:src="@drawable/ic_skip_previous_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullScreenPlay"
        app:layout_constraintStart_toEndOf="@id/fullscreenShuffle"
        android:contentDescription="@string/fullscreenPrevButton" />

    <ImageButton
        android:id="@+id/fullscreenShuffle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:src="@drawable/ic_shuffle_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullscreenPrev"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/shuffle" />

    <TextView
        android:id="@+id/fullscreenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fullscreenArtist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fullscreenArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fullscreenSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:contentDescription="@string/songProgress"
        android:id="@+id/fullscreenSeekBar"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fullScreenPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
