<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notificationlayout"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/coverimageview"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/coverImage"
        android:src="@drawable/ic_music_video_black_24dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:divider="@drawable/divider_white"
            android:dividerPadding="12dp"
            android:gravity="top|center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageButton
                android:id="@+id/prevButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:contentDescription="@string/prevButton"
                android:src="@drawable/ic_skip_previous_white_24dp" />

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:contentDescription="@string/playButton"
                android:src="@drawable/ic_play_arrow_white_24dp" />

            <ImageButton
                android:id="@+id/pauseButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:contentDescription="@string/pauseButton"
                android:src="@drawable/ic_pause_white_24dp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:contentDescription="@string/nextButton"
                android:src="@drawable/ic_skip_next_white_24dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>